<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/oldpass_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/password">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/oldpass"
            android:layout_width="290dp"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newpass1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="120dp"
        android:layout_marginRight="30dp"
        android:hint="@string/change_pass">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newpass"
            android:layout_width="290dp"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newpass2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="200dp"
        android:layout_marginRight="30dp"
        android:hint="@string/confirm_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmpass"
            android:layout_width="290dp"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>