<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primary"
            app:title="Appointment Details"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view_one"
        android:layout_width="match_parent"
        android:layout_height="648dp"
        android:layout_marginTop="85dp"
        android:scrollbars="vertical"
        app:layout_anchor="@+id/scroll_view_one"
        app:layout_anchorGravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Put form controls here-->
            <TextView
                android:id="@+id/appoint01"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:text="@string/appoint_req"
                android:textSize="15sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_01"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="332dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:hint="@string/appointment_title">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="332dp"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/hosp_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="332dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:hint="@string/hospital_name">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="332dp" android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/doctor_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="332dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:hint="@string/doctor_name">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="332dp"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="157dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="30dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/date_text1"
                        android:layout_width="157dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/select_date" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="157dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/time_text1"
                        android:layout_width="157dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/select_time" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/set_rem01"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="35dp"
                    android:text="@string/would_you_like_to_set_reminder"
                    android:textSize="20sp" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:layout_width="80dp"
                    android:layout_height="27dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="30dp"
                    android:checked="true" />
            </LinearLayout>

            <Button
                android:id="@+id/apt_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/doctor_name"
                android:layout_marginTop="50dp"
                android:layout_margin="40dp"
                android:background="@color/primary"
                android:textColor="@color/white"
                android:text="Done" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>